lanecwe-Prod/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Category__c</fullName>
        <description>Outbound email</description>
        <label>Activity Category</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>outbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inbound email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>outbound email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>chat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_External_Id__c</fullName>
        <description>This field host the legacy Id&apos;s from other system.</description>
        <externalId>true</externalId>
        <label>Activity_External_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Time__c</fullName>
        <formula>VALUE(

TRIM(
MID(TEXT(CreatedDate), 12, 2))

)-4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Outcome__c</fullName>
        <label>Event Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Not the Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - Under Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified - No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CEV_Event__c</fullName>
        <label>x-CEV Event</label>
        <picklist>
            <controllingField>Onboarding_Type__c</controllingField>
            <picklistValues>
                <fullName>Non Biller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Simulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>x-Call ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>The channel of the assigned user</description>
        <inlineHelpText>The channel of the assigned user</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_of_Activity_Type__c</fullName>
        <label>Copy of Activity Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Completed_Date__c</fullName>
        <formula>IF(DATEVALUE(CreatedDate) = DATEVALUE(Timestamp_on_Completed_Status__c), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date = Completed Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x-DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>x-DNIS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</description>
        <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</inlineHelpText>
        <label>Data Loader Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>x-Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>x-Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>TODAY() - UsableDueDate__c</formula>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>x-Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Someone Else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Type_Family__c</fullName>
        <formula>CASE(Copy_of_Activity_Type__c, 
&quot;Demo&quot;,&quot;Demo/Presentation&quot;,
&quot;Face-to-Face&quot;,&quot;Meeting&quot;,
&quot;Follow up Email/Letter&quot;,&quot;Email&quot;,
&quot;Phone Call with Decision Maker&quot;,&quot;Phone Call&quot;,
&quot;Phone Call with Non Decision Maker&quot;,&quot;Phone Call&quot;,
&quot;Proposal&quot;,&quot;Proposal&quot;,
&quot;Quarterly Review&quot;,&quot;Quarterly Review&quot;,
&quot;Sales Presentation&quot;,&quot;Demo/Presentation&quot;,
&quot;Web Meeting&quot;,&quot;Meeting&quot;,&quot;UNDEFINED&quot;,
&quot;Outbound Call&quot;,&quot;Outbound Call&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Guid__c</fullName>
        <description>Unique ID for HubSpot related Tasks</description>
        <label>Guid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_modified_Date_by_non_admin__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/Time field that is set via WF Rule whenever a non-admin updates an Account in SFDC. Used to see rep neglecting account trends, etc.</description>
        <label>Last modified Date by (non-admin)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Source_Code__c</fullName>
        <label>x-Name Source Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_Call__c</fullName>
        <label>x-Nature of Call</label>
        <picklist>
            <picklistValues>
                <fullName>sales inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support - technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support - billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support - web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support - new account set up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support - reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>general information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Contact_Outcome__c</fullName>
        <label>x-New Contact Outcome</label>
        <picklist>
            <controllingField>Onboarding_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Onboarding_Type__c</fullName>
        <label>Onboarding Type</label>
        <picklist>
            <picklistValues>
                <fullName>30 Day-Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Day-New Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Dialogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer with Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Message Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Working Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <label>Owner Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Actual__c</fullName>
        <label>x-Phone (Actual)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prev_Lead_ID__c</fullName>
        <label>x-Prev Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMKR_Activity_ID__c</fullName>
        <displayFormat>Activity-{0000000}</displayFormat>
        <label>x-RMKR Activity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Collateral__c</fullName>
        <label>x-Sent Collateral</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Management Level Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp_on_Completed_Status__c</fullName>
        <description>Will have a workflow that stamps the time when the record has been set to a completed status.</description>
        <label>Timestamp on Completed Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UsableDueDate__c</fullName>
        <label>UsableDueDate</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>EVENT_TEAM_MY_OPEN_TASKS</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>smann</value>
        </filters>
        <label>EVENT TEAM : MY OPEN TASKS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_EVENT_MANAGEMENT_TEAM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EVENT_TEAM_MY_TEAMS_TASKS</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cfarr,rroyc,SKoll,efros,bgalv,emoro,hwilk,do’le,bsaff,bpail,lkemp,aabou,sroch</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>ching,ekell</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>smann</value>
        </filters>
        <label>EVENT TEAM : MY TEAMS TASKS</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA_EVENT_MANAGEMENT_TEAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EVENT_TEAM_TASK_COMPLETED_THIS_MONTH</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>EVENT TEAM : TASK COMPLETED THIS MONTH</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_EVENT_MANAGEMENT_TEAM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyCompletedActivities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Completed Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyUpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>My Upcoming Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Events_In_the_past</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Event_Status__c</columns>
        <columns>Appointment_Outcome__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>EVENT.END_DATE_TIME</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Events Not Completed but Finished</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Activities_TODAY</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Open Activities TODAY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Events_THIS_MONTH</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Events THIS MONTH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Events_THIS_WEEK</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Events THIS WEEK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks_THIS_WEEK</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Tasks THIS WEEK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Past_Due_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Past Due Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>z_Admin_Misc_Events</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>davidson</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>4/17/2012 8:30 AM</value>
        </filters>
        <label>z-Admin-Misc-Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>z_Admin_Misc_Tasks</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_External_Id__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filters>
        <label>z-Admin-Misc-Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
</CustomObject>